Removed left float for activity selection box.  Hopefully this doesn't break anything.  This fixes it so that, when viewing an eighth period roster in IE, info is not squashed between the selection box and the right side of the screen (now it looks the same as it always did in Firefox).

--- a/styles/default/eighth/eighth.css
+++ b/styles/default/eighth/eighth.css
@@ -80,7 +80,6 @@
 	margin-bottom: 0px;
 }
 #eighth_include_list {
-	float: left;
 	margin-right: 10px;
 	margin-top: 2px;
 }
